# simple-options-pricing-calculator

./: .gitignore  CMakeLists.txt  README.md
docs/: app.js  index.html  options.js  options.wasm  style.css
math/: .latexindent.yaml  math.aux  math.bak0  math.bak1  math.fdb_latexmk  math.fls  math.out  math.tex
src/: bs.cpp  bs.hpp
wasm/: bindings.cpp
web/: app.js  options.js
